# fl-project-template

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  EXTENDED_README.md  README.md  pyproject.toml  setup.sh
.dev/: test.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/bootstrap/: action.yml
.github/workflows/: framework.yml  mirror-public.yml  update-pr.yml
dev/: format-baseline.sh  test-baseline.sh
docs/source/: api.rst  conf.py  index.rst
plotting/: data_analysis.ipynb
project/: __init__.py  main.py
project/client/: __init__.py  client.py  client_schema.py  mnist_client.py
project/conf/: base.yaml  config.yaml  mnist.yaml
project/conf/client/: default.yaml  mnist.yaml
project/conf/dataset/: default.yaml  mnist.yaml
project/conf/fed/: default.yaml  mnist.yaml
project/conf/strategy/: fedadagrad.yaml  fedadam.yaml  fedavg.yaml  fedavgm.yaml
project/conf/task/: default.yaml  mnist.yaml
project/dispatch/: __init__.py  dispatch.py
project/fed/: __init__.py
project/fed/server/: __init__.py  deterministic_client_manager.py  server.py  wandb_history.py  wandb_server.py
project/fed/server/strategy/: strategy.py
project/fed/utils/: __init__.py  utils.py
project/server/: server.py
project/task/: __init__.py
project/task/default/: dataset.py  dataset_preparation.py  dispatch.py  models.py  train_test.py
project/task/mnist_classification/: __init__.py  dataset.py  dataset_preparation.py  dispatch.py  models.py  train_test.py
project/types/: __init__.py  common.py
project/typing/: __init__.py  common.py
project/utils/: utils.py
run_scripts/: launch.sh
